--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,20 @@
 .App {
   text-align: center;
+  height: 100%;
   /* background-color: blue; */
 }
 
 .App-header {
   color: white;
   background-color: blue;
+}
+.middle{
+  display: flex;
+  height: 100%;
+}
+
+section{
+  height: 100%;
+  display: flex;
+  justify-content: center;
 }
