--- a/src/components/leftBar.css
+++ b/src/components/leftBar.css
@@ -49,3 +49,49 @@
     /* width:60px; */
     color: white;
 }
+
+
+
+.fweet{
+    background-color: white;
+    border: 4px solid black;
+    position: absolute;
+    top: 25%;
+    left: 50%;
+    margin-top: -200px;
+    margin-left: -200px;
+    width: 400px;
+    /* height: 400px; */
+    display: flex;
+    flex-direction: column;
+    border-radius: 20px;
+  }
+  
+  .close{
+    border: none;
+    align-self: flex-start;
+    background: none;
+    border-radius: 20px;
+    font-size: 20px;
+  }
+  
+  #fweetText{
+    height: 250px;
+    max-width: 350px;
+  }
+  
+  form{
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    padding: 20px;
+  }
+  
+  #submitFweet{
+    align-self: flex-end;
+    background-color: blue;
+    color: white;
+    padding: 3px;
+    font-size: 15px;
+    border-radius: 70px;
+  }
