--- a/src/components/leftBar.css
+++ b/src/components/leftBar.css
@@ -80,7 +80,7 @@
     max-width: 350px;
   }
   
-  form{
+  .fweetForm{
     display: flex;
     flex-direction: column;
     gap: 20px;
@@ -95,3 +95,4 @@
     font-size: 15px;
     border-radius: 70px;
   }
+
