--- a/src/components/fweets.css
+++ b/src/components/fweets.css
@@ -17,7 +17,8 @@
     width: 500px;
     gap: 20px;
     padding: 20px;
-    /* width: 100%; */
+    width: 100%;
+    max-width: 1000px;
     overflow-y: scroll;
 }
 
@@ -57,7 +58,7 @@
 
 #replyText{
   max-width: 400px;
-  width: 400px;
+  width: 100%;
   height: 50px;
 }
 
@@ -67,4 +68,10 @@
   background: none;
   border: none;
   font-size: 17px;
+}
+
+
+#profileInfo{
+  display: flex;
+  gap: 10px
 }
